# google-browser-mcp

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/drive_session_mcp/: cli.py  server.py
src/google_session_mcp/: __init__.py  browser.py  calendar.py  cli.py  config.py  drive.py  errors.py  gmail.py  login.py  server.py
tests/: test_drive_helpers.py
