[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-browser-mcp"
version = "0.2.0"
description = "Browser-session Google Workspace MCP server — Drive, Calendar, Gmail — with no OAuth2 credentials."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aleksey Vyazovsky" }]
dependencies = [
    "mcp>=1.2",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
google-browser-mcp = "google_session_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_session_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
